[tool.poetry]
name = "dask-memusage-for-gpus"
version = "1.0"
description = "A Dask Scheduler Plugin to monitor GPU memory usage for tasks"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
homepage = "https://github.com/discovery-unicamp/dask-memusage-for-gpus"
repository = "https://github.com/discovery-unicamp/dask-memusage-for-gpus"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Environment :: GPU :: NVIDIA CUDA",
]
readme="README.md"
exclude = ["tests/*", "docs/*"]
packages = [
    { include = "dask_memusage_for_gpus" },
    { include = "dask_memusage_for_gpus.py" },
]

[tool.poetry.dependencies]
distributed = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
interrogate = "*"
isort = "*"
mock = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
wheel = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-autoapi = "*"
sphinx_rtd_theme = "*"
nbsphinx = "*"
pandoc = "*"

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["dask-memusage-for-gpus", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dask-memusage-for-gpus"]

[tool.coverage.report]
exclude_also = [
    "except ImportError",
    ]

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
